# llm-engineering-toolkit

./: .gitignore  LICENSE  README.md  requirements.txt
attention/: README.md  attention_from_scratch.py
daily-tools-mcp/: .mcp.json  README.md  pyproject.toml
daily-tools-mcp/src/daily_tools/: __init__.py  server.py  utils.py
daily-tools-mcp/src/daily_tools/tools/: __init__.py  code.py  http.py  images.py  json_yaml.py  pdf.py  text.py
inference/: README.md  kv_cache_demo.py  launch_vllm_server.py  test_vllm_client.py  vllm_server_setup.py
insurance_slm/: .env.example  requirements-runpod.txt  requirements-train.txt  requirements.txt  runpod_handler.py  train.py
insurance_slm/data/formatted/: train.jsonl
insurance_slm/data/raw/: sample_qa.csv
insurance_slm/deploy/: Dockerfile  fly.cpu.toml  fly.toml  runpod.Dockerfile
insurance_slm/scripts/: download_model.py  format_dataset.py
insurance_slm/serve/: app.py  model_loader.py  runpod_handler.py
lora/: README.md  lora_demo_auto.py  lora_demo_explained.py  lora_financial_finetuning.py  lora_minimal_example.py
quantization/: README.md  awq_quantization_demo.py  quantization_benchmark.py
