[project]
name = "daily-tools-mcp"
version = "0.1.0"
description = "MCP Server with useful daily tools - JSON, images, PDFs, code formatting, HTTP, and text processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "sqlfluff>=3.0.0",
]

[project.scripts]
daily-tools = "daily_tools.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_tools"]
